helmcharts/ingress/dev/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: ingress-dev
  namespace: dev
spec:
  rules:
  - host: dev.askmyaws.com
    http:
      paths:
      - path: /auth
        backend:
          serviceName: keycloak
          servicePort: 80
      - path: /
        backend:
          serviceName: test
          servicePort: 80
